feat(security): 添加内部调用权限验证机制
- 移除所有模块中的 Swagger 和 Knife4j 配置
- 新增 ForbiddenException 自定义异常类- 添加全局异常处理器处理权限异常
- 完善 @SecurityInner 注解及切面逻辑，增强内部调用安全性
- 更新 UserChannelMap 中的流操作语法